# goit-web-hw14

./: .gitignore  auth.py  auth_routes.py  config.py  contacts.py  docker-compose.yml  main.py  models.py  my_db.py  my_routes.py  pyproject.toml  shemas.py  test.db  user_email.py  users.py  users_routes.py
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
migration/: env.py
migration/versions/: e6e8aabca3ac_init.py
templates/: email_password-template.html  email_template.html
tests/: conftest.py  test_routes_auth.py  test_unit_repository_contacts-alt.py  test_unit_repository_contacts.py  test_unit_repository_users.py
